mody content and button

--- a/templates/Pages/realisations.html.twig
+++ b/templates/Pages/realisations.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
 <h1 class="text-center pt-5">Mes réalisations</h1>
 
-    <div class="flex-container">
+    <div class="flex-container img-resp">
 {% for medium in media %}
 
     <div>
