--- a/templates/admin/edit.html.twig
+++ b/templates/admin/edit.html.twig
@@ -7,6 +7,6 @@
 
     {{ include('admin/_delete_form.html.twig') }}
 
-    <div class="btn"><a href="{{ path('media_index') }}">Retour vers les photos</a></div>
+    <button class="btn btn-dark button-show2"><a href="{{ path('media_index') }}">Retour vers les photos</a></button>
 
 {% endblock content %}
