--- a/templates/Base/base.html.twig
+++ b/templates/Base/base.html.twig
@@ -25,7 +25,7 @@
 
     <!--MENU-->
     <header class="container-fluid p-0" >
-        <nav role="navigation" class="primary-navigation d-sm-none d-lg-block {% block classFondNav %}{% endblock classFondNav %}">
+        <nav  class="primary-navigation  d-lg-block menu-resp {% block classFondNav %}{% endblock classFondNav %}">
             <ul class="menu col-sm-12 col-lg-12">
                 <li><a href="{{ path('accueil') }}">Accueil</a></li>
                 <li><a href="{{ path('peintures') }}">Peinture intérieur - extérieur</a></li>
@@ -44,7 +44,7 @@
         {% block content %}
         {% endblock content %}
 
-    <footer class="container-fluid">
+    <footer class="container-fluid footer-resp">
         <nav>
             <ul class="row justify-content-around align-items-center m-0 py-3">
                 <li class="col-3 text-center">
