--- a/templates/Base/base.html.twig
+++ b/templates/Base/base.html.twig
@@ -48,7 +48,7 @@
         <nav>
             <ul class="row justify-content-around align-items-center m-0 py-3">
                 <li class="col-3 text-center">
-                    <a href=""> CGU-Mention légales</a>
+                    <a href="{{ path('cgu-ml') }}"> CGU-Mention légales</a>
                 </li>
                 <li class="col-3 text-center">
                     <a href=""> Plan du site</a>
