--- a/templates/Pages/contact.html.twig
+++ b/templates/Pages/contact.html.twig
@@ -2,32 +2,37 @@
 
 {% block content %}
 
-    {% for message in app.flashes ('message') %}
-        <div class="alert alert-success" role="alert">
-            {{ message }}
-        </div>
-    {% endfor %}
-
     <h2 class="row justify-content-center pt-5">Nous contacter</h2>
+
+        {% for message in app.flashes ('message') %}
+            <div class="alert alert-success text-align-center" role="alert">
+                {{ message }}
+            </div>
+        {% endfor %}
 
     <div id="contactForm" class="pt-5 row">
         {{ form_start(contactForm) }}
             <div>{{ form_label(contactForm.lastname) }}</div>
+            <div>{{ form_errors(contactForm.lastname) }}</div>
             <div>{{ form_widget(contactForm.lastname, {'attr' : {'class' : 'widget_contact'}}) }}</div>
 
             <div class="pt-4">{{ form_label(contactForm.firstname) }}</div>
+            <div>{{ form_errors(contactForm.firstname) }}</div>
             <div>{{ form_widget(contactForm.firstname, {'attr' : {'class' : 'widget_contact'}}) }}</div>
 
             <div class="pt-4">{{ form_label(contactForm.email) }}</div>
+            <div>{{ form_errors(contactForm.email) }}</div>
             <div>{{ form_widget(contactForm.email, {'attr' : {'class' : 'widget_contact'}}) }}</div>
 
             <div class="pt-4">{{ form_label(contactForm.phone) }}</div>
+            <div>{{ form_errors(contactForm.phone) }}</div>
             <div>{{ form_widget(contactForm.phone, {'attr' : {'class' : 'widget_contact'}}) }}</div>
 
             <div class="pt-4">{{ form_label(contactForm.adress) }}</div>
             <div>{{ form_widget(contactForm.adress, {'attr' : {'class' : 'widget_contact'}}) }}</div>
 
             <div class="pt-4">{{ form_label(contactForm.content) }}</div>
+            <div>{{ form_errors(contactForm.content) }}</div>
             <div>{{ form_widget(contactForm.content, {'attr' : {'class' : 'widget_contact'}}) }}</div>
 
             <div class="w-sub">{{ form_widget(contactForm.submit, {'attr' : {'class' : 'widget_submit'}}) }}</div>
