--- a/templates/Pages/cgu-ml.html.twig
+++ b/templates/Pages/cgu-ml.html.twig
@@ -1,7 +1,8 @@
 {% extends 'Base/base.html.twig' %}
 
 {% block content %}
-<h2>Définitions</h2>
+<h2 class="text-center">Définitions</h2>
+    <div class="m-5">
 <p><b>Client&nbsp;:</b>&nbsp;tout professionnel ou personne physique capable au sens des articles 1123 et suivants du Code civil, ou personne morale, qui visite le Site objet des présentes conditions générales.<br>
     <b>Prestations et Services&nbsp;:</b> <a href="https://www.entreprise-garcia.com">https://www.entreprise-garcia.com</a> met à disposition des Clients&nbsp;:</p>
 
@@ -209,6 +210,7 @@ Sauf si vous décidez de désactiver les cookies, vous acceptez que le site puis
 <p>
     Tout litige en relation avec l’utilisation du site&nbsp;<a href="https://www.entreprise-garcia.com">https://www.entreprise-garcia.com</a>&nbsp;est soumis au droit français.
     En dehors des cas où la loi ne le permet pas, il est fait attribution exclusive de juridiction aux tribunaux compétents de Paris</p>
+    </div>
 {% endblock content %}
 
 
