--- a/public/css/page_accueil.scss
+++ b/public/css/page_accueil.scss
@@ -8,6 +8,7 @@
   background-color: rgba(236, 240, 241, 0.7);
   padding: 5%;
   margin: 7% 20%;
+  border-radius: 15px;
 }
 
 .divGarcia p {
@@ -80,7 +81,7 @@
 
 #flip > div > div {
   color:#fff;
-  padding:4px 12px;
+  padding:1px 12px;
   height:45px;
   margin-bottom:45px;
   display:inline-block;
