--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -22,39 +22,44 @@
 
 //MENU
 nav {
-  &.primary-navigation {
     margin: 0 auto;
     padding-top: 20px;
     text-align: center;
     font-size: 16px;
-  }
+    padding: 2% 10%;
 }
 
-    ul li {
-      list-style: none;
-      margin: 0 auto;
-      border-left: 2px solid #3ca0e7;
-      display: inline-block;
-      padding: 0 30px;
-      position: relative;
-      text-decoration: none;
-      text-align: center;
+nav ul{
+  background-color: #292929;
+  padding: 1%;
+  border-radius: 15px;
+}
+
+ul li {
+  list-style: none;
+  margin: 0 auto;
+  display: inline-block;
+  padding: 0 30px;
+  position: relative;
+  text-decoration: none;
+  text-align: center;
+}
+
+li a {
+
+  color: white;
     }
 
-    li a {
-      color: black;
-    }
-
-    li:hover {
+li:hover {
       cursor: pointer;
     }
 
-    ul li a {
-      &:hover {
-        color: #C82829;
-        text-decoration: none;
-      }
-    }
+ul li a {
+  &:hover {
+    color: #548687;
+    text-decoration: none;
+  }
+}
 
 ul li a { transition: all 0.5s ease; }
 
