--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,7 @@
   background-color: rgba(236, 240, 241, 0.7);
   padding: 5%;
   margin: 7% 20%;
+  border-radius: 15px;
 }
 
 .divGarcia p {
@@ -77,7 +78,7 @@
 
 #flip > div > div {
   color: #fff;
-  padding: 4px 12px;
+  padding: 1px 12px;
   height: 45px;
   margin-bottom: 45px;
   display: inline-block;
@@ -303,17 +304,23 @@ a:hover {
   background-attachment: fixed;
 }
 
-nav.primary-navigation {
+nav {
   margin: 0 auto;
   padding-top: 20px;
   text-align: center;
   font-size: 16px;
+  padding: 2% 10%;
+}
+
+nav ul {
+  background-color: #292929;
+  padding: 1%;
+  border-radius: 15px;
 }
 
 ul li {
   list-style: none;
   margin: 0 auto;
-  border-left: 2px solid #3ca0e7;
   display: inline-block;
   padding: 0 30px;
   position: relative;
@@ -322,7 +329,7 @@ ul li {
 }
 
 li a {
-  color: black;
+  color: white;
 }
 
 li:hover {
@@ -330,7 +337,7 @@ li:hover {
 }
 
 ul li a:hover {
-  color: #C82829;
+  color: #548687;
   text-decoration: none;
 }
 
