--- a/templates/Base/base.html.twig
+++ b/templates/Base/base.html.twig
@@ -51,7 +51,7 @@
                 <li class="col-lg-1 col-sm-2 text-center">
                     <a href="https://www.facebook.com/Entreprise-Garcia-645327215582537"
                        target="_blank">
-                        <img src="{{ asset("img/fb.png") }}"
+                        <img src="{{ asset("/img/fb.png") }}"
                              alt="logo"
                              class="img-fluid logofb"/>
                     </a>
