--- a/templates/Base/base.html.twig
+++ b/templates/Base/base.html.twig
@@ -48,8 +48,8 @@
                 <li class="col-3 text-center">
                     <a href="{{ path('cgu-ml') }}"> CGU-Mention légales</a>
                 </li>
-                <li class="col-sm-2 text-center">
-                    <a href="https://www.facebook.com/Entreprise-Garcia-645327215582537" target="_blank"><img src="{{ asset("img/fb.png") }}" alt="logo" class="img-fluid logofb"/></a>
+                <li>
+                    <a href="https://www.facebook.com/Entreprise-Garcia-645327215582537" target="_blank"><img src="{{ asset("../img/") }}" alt="logo" class="img-fluid logofb"/></a>
                 </li>
             </ul>
     </footer>
