--- a/templates/Base/base.html.twig
+++ b/templates/Base/base.html.twig
@@ -49,7 +49,7 @@
                     <a href="{{ path('cgu-ml') }}"> CGU-Mention légales</a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/Entreprise-Garcia-645327215582537" target="_blank"><img src="{{ asset("../img/") }}" alt="logo" class="img-fluid logofb"/></a>
+                    <a href="https://www.facebook.com/Entreprise-Garcia-645327215582537" target="_blank"><img src="{{ asset("img/fb.png") }}" alt="logo" class="img-fluid logofb"/></a>
                 </li>
             </ul>
     </footer>
