--- a/templates/Base/base.html.twig
+++ b/templates/Base/base.html.twig
@@ -48,7 +48,7 @@
                 <li class="col-3 text-center">
                     <a href="{{ path('cgu-ml') }}"> CGU-Mention légales</a>
                 </li>
-                <li>
+                <li class="col-lg-3">
                     <a href="https://www.facebook.com/Entreprise-Garcia-645327215582537" target="_blank"><img src="{{ asset("img/fb.png") }}" alt="logo" class="img-fluid logofb"/></a>
                 </li>
             </ul>
