--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -35,7 +35,7 @@ nav {
 }
 
 nav ul{
-  background-color: rgb(175 121 1 / 0.75);
+  background-color: rgb(0 126 146 / 91%);
   padding: 1%;
   border-radius: 15px;
 }
@@ -61,7 +61,7 @@ li:hover {
 
 ul li a {
   &:hover {
-    color: #548687;
+    color: #000;
     text-decoration: none;
   }
 }
