--- a/public/style.css
+++ b/public/style.css
@@ -137,20 +137,23 @@
 
 /*ANIMATION END*/
 /* PEINTURE INTERIEUR EXTERIEUR */
-.bloc1 {
-  background-color: rgba(236, 240, 241, 0.7);
-  padding: 5%;
+h1 {
+  font-size: 50px;
+  color: black;
+  text-transform: uppercase;
+  font-family: "Dancing";
 }
 
-.bloc2 {
-  background-color: rgba(236, 240, 241, 0.7);
-  padding: 5%;
+span {
+  border-right: 0.05em solid;
+  animation: caret 1s steps(1) infinite;
 }
 
-.bloc1 {
-  padding-bottom: 5%;
+@keyframes caret {
+  50% {
+    border-color: transparent;
+  }
 }
-
 /* TRAVAUX */
 .travaux {
   background-image: url("img/travaux.jpg");
@@ -348,7 +351,7 @@ ul li a {
 /* FOOTER */
 footer {
   background-color: rgba(0, 0, 0, 0.84);
-  margin-top: 10%;
+  margin-top: 50%;
 }
 
 footer ul {
