--- a/templates/Pages/interieur-exterieur.html.twig
+++ b/templates/Pages/interieur-exterieur.html.twig
@@ -2,17 +2,8 @@
 
 {% block content %}
     <section>
-        <div class="row justify-content-around bloc1">
-        <div class="bloc1">
-            <p>- Peinture intérieur et extérieur</p>
-            <p>- Ravalement de façade</p>
-            <p>- Peinture mûrs et plafonds</p>
-        </div>
+        <h1 class="text-center">Animation texte</h1>
 
-        <div class="bloc2">
-            <p>- </p>
-        </div>
-        </div>
     </section>
 
 {% endblock content %}
