--- a/templates/Pages/interieur-exterieur.html.twig
+++ b/templates/Pages/interieur-exterieur.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     <section>
-        <h1 class="text-center">Animation texte</h1>
+        <h3 class="text-center anim">Animation texte</h3>
 
     </section>
 
