--- a/public/style.css
+++ b/public/style.css
@@ -351,7 +351,7 @@ ul li a {
 /* FOOTER */
 footer {
   background-color: rgba(0, 0, 0, 0.84);
-  margin-top: 50%;
+  margin-top: 40%;
 }
 
 footer ul {
@@ -371,6 +371,7 @@ footer a:hover {
   max-width: 20%;
 }
 
+/* RESPONSIVE */
 @media screen and (max-width: 700px) {
   .logofb {
     max-width: 100%;
