--- a/public/css/travaux.scss
+++ b/public/css/travaux.scss
@@ -1,5 +1,5 @@
 /* TRAVAUX */
 .travaux {
-  background-image: url("img/travaux.jpg");
+  background-image: url("img/fond_toiture.jpg");
   @extend %fond;
 }
