--- a/templates/Pages/interieur-exterieur.html.twig
+++ b/templates/Pages/interieur-exterieur.html.twig
@@ -1,8 +1,16 @@
 {% extends "Base/base.html.twig" %}
 
+{% block classFondNav %}fond-peinture{% endblock classFondNav %}
+
+{% block contentNav %}<h3 class="text-center anim">Animation texte</h3>{% endblock contentNav %}
+
 {% block content %}
+
     <section>
-        <h3 class="text-center anim">Animation texte</h3>
+        <h2 class="text-center mt-5">Ce que nous réalisons</h2>
+
+        <p class="txt1-p">Nous réalisons tout types de peinture. En passant par de la peinture classique tout type de surface jusqu'à la
+            <strong><em>peinture décorative</em></strong> pour vos envies et vos goûts particuliers.</p>
 
     </section>
 
