--- a/public/css/peinture_int_ext.scss
+++ b/public/css/peinture_int_ext.scss
@@ -1,16 +1,34 @@
 /* PEINTURE INTERIEUR EXTERIEUR */
 
+.fond-peinture{
+  background-image: url("img/fond-peinture.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+}
 
 h3 {
   font-size: 50px;
-  color: black;
+  color: white;
   text-transform: uppercase;
-  font-family: 'Dancing';
+}
+
+.anim{
+  margin-top: 5%;
 }
 
 span {
   border-right: .05em solid;
   animation: caret 1s steps(1) infinite;
+}
+
+.txt1-p{
+  width: 30%;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 5%;
+  font-size: 18px;
 }
 
 @keyframes caret {
