--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,7 @@
 .divGarcia {
   background-color: rgba(255, 255, 255, 0.8);
   padding: 5%;
-  margin: 7% 20%;
+  margin: 5% 20%;
   border-radius: 15px;
 }
 
@@ -137,16 +137,35 @@
 
 /*ANIMATION END*/
 /* PEINTURE INTERIEUR EXTERIEUR */
+.fond-peinture {
+  background-image: url("img/fond-peinture.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+}
+
 h3 {
   font-size: 50px;
-  color: black;
+  color: white;
   text-transform: uppercase;
-  font-family: "Dancing";
+}
+
+.anim {
+  margin-top: 5%;
 }
 
 span {
   border-right: 0.05em solid;
   animation: caret 1s steps(1) infinite;
+}
+
+.txt1-p {
+  width: 30%;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 5%;
+  font-size: 18px;
 }
 
 @keyframes caret {
@@ -156,7 +175,7 @@ span {
 }
 /* TRAVAUX */
 .travaux {
-  background-image: url("img/travaux.jpg");
+  background-image: url("img/fond_toiture.jpg");
 }
 
 /*CONTACT*/
