--- a/templates/Pages/interieur-exterieur.html.twig
+++ b/templates/Pages/interieur-exterieur.html.twig
@@ -9,9 +9,16 @@
     <section>
         <h2 class="text-center mt-5">Ce que nous réalisons</h2>
 
-        <p class="txt1-p">Nous réalisons tout types de peinture. En passant par de la peinture classique tout type de surface jusqu'à la
+        <p class="txt1-p">Nous réalisons tout types de peintures. En passant par de la peinture classique tout type de surface jusqu'à la
             <strong><em>peinture décorative</em></strong> pour vos envies et vos goûts particuliers.</p>
 
+
+        <div class="d-flex icon">
+            <div class="icons"><img src="img/icons/high-quality.png"/><p>Qualité garantie</p></div>
+
+            <div class="icons"><img src="img/icons/handshake.png"/><p>Proximité</p></div>
+            <div class="icons"><img src="img/icons/calendar.png"/><p>Respect des engagements</p></div>
+        </div>
     </section>
 
 {% endblock content %}
