--- a/templates/Pages/interieur-exterieur.html.twig
+++ b/templates/Pages/interieur-exterieur.html.twig
@@ -1,5 +1,11 @@
 {% extends "Base/base.html.twig" %}
 
+{% block MetaDescription %}<meta name="description" content="Réalisation de peinture intérieur et extérieur, peinture décorative,
+                            pose de parquet, pose de lino, pose de dalles et lames PVC, Neuf et rénovation à VILLEMOUTIERS. ">
+{% endblock MetaDescription %}
+
+{% block title %}<title>Peinture intérieur & extérieur</title>{% endblock title %}
+
 {% block classFondNav %}fond-peinture{% endblock classFondNav %}
 
 {% block contentNav %}<h3 class="text-center anim">Animation texte</h3>{% endblock contentNav %}
