--- a/templates/Pages/page-accueil.html.twig
+++ b/templates/Pages/page-accueil.html.twig
@@ -1,5 +1,11 @@
 {% extends "Base/base.html.twig" %}
 
+{% block MetaDescription %}<meta name="description" content="Entreprise GARCIA artisan peintre à VILLEMOUTIERS dans le 45270,
+                            réalise tout type de travaux et de peintures.">
+{% endblock MetaDescription %}
+
+{% block title %}<title>Entreprise Garcia - Neuf & Rénovation</title>{% endblock title %}
+
 {% block classFondNav %}fond_accueil{% endblock classFondNav %}
 
 {% block contentNav %}
