--- a/templates/Pages/realisations.html.twig
+++ b/templates/Pages/realisations.html.twig
@@ -1,5 +1,9 @@
 {% extends 'Base/base.html.twig' %}
 
+{% block MetaDescription %}<meta name="description" content="Page de contenu de photos">{% endblock MetaDescription %}
+
+{% block title %}<title>Réalisations</title>{% endblock title %}
+
 {% block content %}
 <h1 class="text-center pt-5">Mes réalisations</h1>
 
