--- a/templates/Pages/travaux.html.twig
+++ b/templates/Pages/travaux.html.twig
@@ -1,5 +1,11 @@
 {% extends "Base/base.html.twig" %}
 
+{% block MetaDescription %}<meta name="description" content="Travaux du quotidien, passage de tondeuse pour personnes agées,
+                            changement de prises électriques.">
+{% endblock MetaDescription %}
+
+{% block title %}<title>Travaux</title>{% endblock title %}
+
 {% block classFondNav %}travaux{% endblock classFondNav %}
 
 {% block content %}
