--- a/templates/Base/base.html.twig
+++ b/templates/Base/base.html.twig
@@ -2,14 +2,15 @@
 <html>
     <head>
         <meta name="author" content="GOMEZ Guillaume" />
-        <meta name="description" content="" />
+        {% block MetaDescription %}<meta name="description" content="">{% endblock MetaDescription %}
         <meta name="keywords"
-              content="Peinture intérieur, extérieur, ravalement de façade, petit travaux"/>
+              content="Neuf, Rénovation, Peinture intérieur, Peinture extérieur, ravalement de façade, petit travaux, Peinture décorative
+                        Pose de parquet, pose de lino, pose de dalles PVC, pose de lames PVC."/>
         <meta charset="UTF-8"/>
         <meta name="viewport"
               content="width=device-width, initial-scale=1.0" />
 
-        <title>Entreprise GARCIA</title>
+        {% block title %}<title></title>{% endblock title %}
 
         <link rel="stylesheet"
               href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
