--- a/templates/Pages/cgu-ml.html.twig
+++ b/templates/Pages/cgu-ml.html.twig
@@ -1,5 +1,8 @@
 {% extends 'Base/base.html.twig' %}
 
+{% block title %}<title>Mentions Légales</title>{% endblock title %}
+
+
 {% block content %}
 <h2 class="text-center mt-5">Définitions</h2>
     <div class="m-5">
