--- a/templates/Pages/contact.html.twig
+++ b/templates/Pages/contact.html.twig
@@ -1,5 +1,9 @@
 {% extends "Base/base.html.twig" %}
 
+{% block MetaDescription %}<meta name="description" content="Formulaire de contact pour établir un devis avec l'artisan.">{% endblock MetaDescription %}
+
+{% block title %}<title>Contact</title>{% endblock title %}
+
 {% block classFondNav %}fond-contact{% endblock classFondNav %}
 
 {% block contentNav %}
