--- a/templates/Pages/cgu-ml.html.twig
+++ b/templates/Pages/cgu-ml.html.twig
@@ -1,5 +1,7 @@
 {% extends 'Base/base.html.twig' %}
 
+{% block MetaDescription %}<meta name="description" content="Mentions légales">{% endblock MetaDescription %}
+
 {% block title %}<title>Mentions Légales</title>{% endblock title %}
 
 
