--- a/templates/Base/base.html.twig
+++ b/templates/Base/base.html.twig
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8"/>
         <meta name="author" content="GOMEZ Guillaume" />
+        <meta name="robots" content="index" />
         {% block MetaDescription %}<meta name="description" content="">{% endblock MetaDescription %}
         <meta name="keywords"
               content="Neuf, Rénovation, Peinture intérieur, Peinture extérieur, ravalement de façade, petit travaux, Peinture décorative
                         Pose de parquet, pose de lino, pose de dalles PVC, pose de lames PVC."/>
-        <meta charset="UTF-8"/>
+
         <meta name="viewport"
               content="width=device-width, initial-scale=1.0" />
 
