--- a/templates/Base/base.html.twig
+++ b/templates/Base/base.html.twig
@@ -24,6 +24,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 
         <link rel="stylesheet" href="{{ asset('style.css') }}" />
+
+        <meta name="google-site-verification" content="AaItSSP0XEqzb4EFy7bgatjVtLk65MucICwGJuYfYFA" />
     </head>
 
     <!--MENU-->
