--- a/templates/Base/base.html.twig
+++ b/templates/Base/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="author" content="GOMEZ Guillaume" />
-        <meta name="robots" content="index" />
+        <meta name="robots" content="index, follow" />
         {% block MetaDescription %}<meta name="description" content="">{% endblock MetaDescription %}
         <meta name="keywords"
               content="Neuf, Rénovation, Peinture intérieur, Peinture extérieur, ravalement de façade, petit travaux, Peinture décorative
