--- a/templates/Pages/page-accueil.html.twig
+++ b/templates/Pages/page-accueil.html.twig
@@ -4,7 +4,7 @@
                             réalise tout type de travaux et de peintures.">
 {% endblock MetaDescription %}
 
-{% block title %}<title>Entreprise Garcia - Neuf & Rénovation</title>{% endblock title %}
+{% block title %}<title>Entreprise Garcia - Artisan peintre Villemoutiers 45270</title>{% endblock title %}
 
 {% block classFondNav %}fond_accueil{% endblock classFondNav %}
 
